@@ -1,3 +1,8 @@
+2011-08-29  Paul Fitzpatrick <paul@robotrebuilt.com>
+
+	* src/carriers/tcpros_carrier/RosType.cpp: fix use of 
+	non-portable header files [thanks Giorgio Metta]
+
 2011-08-26  Lorenzo Natale <lorenzo.natale@iit.it>
 
 	* src/libYARP_OS/src/DgramTwoWayStream.cpp:
